[gd_scene load_steps=33 format=2]

[ext_resource path="res://Assets/Objects/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Resources/Fonts/Montserrat/Montserrat-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Resources/Fonts/Montserrat/Montserrat-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Objects/Player/Anims/BlackFadeOut.tres" type="Animation" id=4]
[ext_resource path="res://Assets/Objects/Player/Anims/BlackFadeIn.tres" type="Animation" id=5]
[ext_resource path="res://Assets/Resources/Images/Player/placeholder_idle.png" type="Texture" id=6]
[ext_resource path="res://Assets/Resources/Images/LightMasks/LMcircle1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Resources/Images/star.png" type="Texture" id=8]
[ext_resource path="res://Assets/Resources/Fonts/DynamicPresets/Montserrat.tres" type="DynamicFont" id=9]
[ext_resource path="res://Assets/Objects/Player/PauseMenu.gd" type="Script" id=10]

[sub_resource type="Animation" id=10]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="CircleShape2D" id=11]
radius = 20.0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 20, 12.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 40 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20, 4.5 )

[sub_resource type="DynamicFontData" id=16]
font_path = "res://Assets/Resources/Fonts/Montserrat/Montserrat-Light.ttf"

[sub_resource type="DynamicFont" id=17]
size = 10
outline_size = 1
outline_color = Color( 0.211765, 0.211765, 0.211765, 1 )
font_data = SubResource( 16 )

[sub_resource type="Theme" id=18]
default_font = SubResource( 17 )

[sub_resource type="Theme" id=12]

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=14]
default_font = SubResource( 13 )

[sub_resource type="DynamicFont" id=15]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 15 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.137482, 0.332031, 0.316257, 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.121569, 0.427451, 0.376471, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.054902, 0.133333, 0.129412, 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="Theme" id=23]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = ExtResource( 9 )
Button/styles/disabled = SubResource( 7 )
Button/styles/focus = null
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 21 )
Button/styles/pressed = SubResource( 6 )
Panel/styles/panel = SubResource( 22 )

[sub_resource type="DynamicFont" id=19]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=20]
default_font = SubResource( 19 )

[node name="Player" type="KinematicBody2D"]
z_index = 10
collision_layer = 32769
collision_mask = 32769
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5, 5.125 )
texture = ExtResource( 6 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/idle = SubResource( 10 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 4 )
shape = SubResource( 2 )

[node name="GroundChecker" type="Area2D" parent="."]
position = Vector2( 0, 40 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GroundChecker"]
position = Vector2( 0, 1 )
shape = SubResource( 11 )

[node name="WaterChecker" type="Area2D" parent="."]
position = Vector2( 0, 5 )
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WaterChecker"]
position = Vector2( 0, -15.5 )
shape = SubResource( 9 )

[node name="InteractChecker" type="Node2D" parent="."]

[node name="InteractCheckerR" type="Area2D" parent="InteractChecker"]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D2" type="CollisionShape2D" parent="InteractChecker/InteractCheckerR"]
position = Vector2( 40, 1 )
shape = SubResource( 3 )

[node name="InteractCheckerL" type="Area2D" parent="InteractChecker"]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D2" type="CollisionShape2D" parent="InteractChecker/InteractCheckerL"]
position = Vector2( -40, 1 )
shape = SubResource( 3 )

[node name="OxygenChecker" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OxygenChecker"]
position = Vector2( 0, -29.5 )
shape = SubResource( 4 )

[node name="DarknessChecker" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DarknessChecker"]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="CaveEntranceChecker" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CaveEntranceChecker"]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="StarCollider" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StarCollider"]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
smoothing_enabled = true

[node name="UI" type="CanvasLayer" parent="Camera"]

[node name="Bars" type="VBoxContainer" parent="Camera/UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 201.0
margin_top = -58.0
margin_right = -201.0
margin_bottom = -12.0
grow_horizontal = 2

[node name="SanityBar" type="ColorRect" parent="Camera/UI/Bars"]
margin_right = 452.0
margin_bottom = 12.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.556863, 0.215686, 0.843137, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="OxygenBar" type="ColorRect" parent="Camera/UI/Bars"]
margin_top = 16.0
margin_right = 452.0
margin_bottom = 29.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.215686, 0.698039, 0.843137, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HealthBar" type="ColorRect" parent="Camera/UI/Bars"]
margin_top = 33.0
margin_right = 452.0
margin_bottom = 46.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.843137, 0.215686, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BarText" type="VBoxContainer" parent="Camera/UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 201.0
margin_top = -57.0
margin_right = -201.0
margin_bottom = -10.0
grow_horizontal = 2

[node name="Sanity" type="Label" parent="Camera/UI/BarText"]
margin_right = 452.0
margin_bottom = 13.0
theme = SubResource( 18 )
text = "Sanity"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Oxygen" type="Label" parent="Camera/UI/BarText"]
margin_top = 17.0
margin_right = 452.0
margin_bottom = 30.0
theme = SubResource( 18 )
text = "Oxygen"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Health" type="Label" parent="Camera/UI/BarText"]
margin_top = 34.0
margin_right = 452.0
margin_bottom = 47.0
theme = SubResource( 18 )
text = "Health"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Control" type="Control" parent="Camera/UI"]
margin_right = 40.0
margin_bottom = 40.0
theme = SubResource( 12 )

[node name="Oxygen" type="Control" parent="Camera/UI/Control"]
visible = false
light_mask = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 435.0
margin_top = 275.0
margin_right = 475.0
margin_bottom = 315.0

[node name="OxygenLabel" type="Label" parent="Camera/UI/Control/Oxygen"]
light_mask = 2
margin_left = -498.0
margin_top = -288.0
margin_right = -365.0
margin_bottom = -245.0
theme = SubResource( 14 )
text = "Oxygen:"
align = 2

[node name="OxygenRemaining" type="Label" parent="Camera/UI/Control/Oxygen"]
light_mask = 2
margin_left = -350.0
margin_top = -288.0
margin_right = -217.0
margin_bottom = -245.0
theme = SubResource( 8 )
text = "null%"

[node name="Role" type="Control" parent="Camera/UI/Control"]
light_mask = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 403.0
margin_top = 331.0
margin_right = 443.0
margin_bottom = 371.0

[node name="RoleLabel" type="Label" parent="Camera/UI/Control/Role"]
light_mask = 2
margin_left = -498.0
margin_top = -288.0
margin_right = -365.0
margin_bottom = -245.0
theme = SubResource( 14 )
text = "Role:"
align = 2

[node name="RoleText" type="Label" parent="Camera/UI/Control/Role"]
light_mask = 2
margin_left = -355.0
margin_top = -288.0
margin_right = -222.0
margin_bottom = -245.0
theme = SubResource( 8 )
text = "null"

[node name="Stars" type="Control" parent="Camera/UI/Control"]
light_mask = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 410.0
margin_top = 278.0
margin_right = 450.0
margin_bottom = 318.0

[node name="StarLabel" type="Label" parent="Camera/UI/Control/Stars"]
visible = false
light_mask = 2
margin_left = -498.0
margin_top = -288.0
margin_right = -365.0
margin_bottom = -245.0
theme = SubResource( 14 )
text = "Stars:"
align = 2

[node name="StarsCount" type="Label" parent="Camera/UI/Control/Stars"]
light_mask = 2
margin_left = -362.0
margin_top = -278.0
margin_right = -229.0
margin_bottom = -235.0
theme = SubResource( 8 )
text = "null"

[node name="Sprite" type="Sprite" parent="Camera/UI/Control/Stars"]
position = Vector2( -398, -267 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 8 )

[node name="Gold" type="Control" parent="Camera/UI/Control"]
light_mask = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 370.0
margin_top = 275.0
margin_right = 410.0
margin_bottom = 315.0

[node name="GoldRemaining" type="Label" parent="Camera/UI/Control/Gold"]
light_mask = 2
margin_left = 320.0
margin_top = -288.0
margin_right = 453.0
margin_bottom = -245.0
theme = SubResource( 8 )
text = "$null"
align = 2

[node name="Health" type="Control" parent="Camera/UI/Control"]
visible = false
light_mask = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 435.0
margin_top = 264.0
margin_right = 475.0
margin_bottom = 304.0

[node name="HealthLabel" type="Label" parent="Camera/UI/Control/Health"]
light_mask = 2
margin_left = -498.0
margin_top = -240.0
margin_right = -365.0
margin_bottom = -197.0
theme = SubResource( 14 )
text = "Health:"
align = 2

[node name="HealthRemaining" type="Label" parent="Camera/UI/Control/Health"]
light_mask = 2
margin_left = -350.0
margin_top = -240.0
margin_right = -217.0
margin_bottom = -197.0
theme = SubResource( 8 )
text = "null%"

[node name="Sanity" type="Control" parent="Camera/UI/Control"]
visible = false
light_mask = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 435.0
margin_top = 300.0
margin_right = 475.0
margin_bottom = 340.0

[node name="SanityLabel" type="Label" parent="Camera/UI/Control/Sanity"]
light_mask = 2
margin_left = -498.0
margin_top = -240.0
margin_right = -365.0
margin_bottom = -197.0
theme = SubResource( 14 )
text = "Sanity:"
align = 2

[node name="SanityRemaining" type="Label" parent="Camera/UI/Control/Sanity"]
light_mask = 2
margin_left = -350.0
margin_top = -240.0
margin_right = -217.0
margin_bottom = -197.0
theme = SubResource( 8 )
text = "null%"

[node name="Blackout" type="ColorRect" parent="Camera/UI"]
visible = false
light_mask = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -600.0
margin_top = -300.0
margin_right = 600.0
margin_bottom = 300.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/UI/Blackout"]
anims/BlackFadeIn = ExtResource( 5 )
anims/BlackFadeOut = ExtResource( 4 )

[node name="PMenu" type="CanvasLayer" parent="Camera"]
layer = 2

[node name="PauseMenu" type="Control" parent="Camera/PMenu"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
theme = SubResource( 23 )
script = ExtResource( 10 )

[node name="Panel" type="Panel" parent="Camera/PMenu/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0

[node name="Label" type="Label" parent="Camera/PMenu/PauseMenu/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -62.0
margin_top = 10.0
margin_right = 62.0
margin_bottom = 50.0
theme = SubResource( 20 )
text = "Paused"

[node name="Buttons" type="VBoxContainer" parent="Camera/PMenu/PauseMenu/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -84.0
margin_right = 140.0
margin_bottom = 84.0

[node name="Resume" type="Button" parent="Camera/PMenu/PauseMenu/Panel/Buttons"]
margin_right = 280.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume"

[node name="HBoxContainer" type="HBoxContainer" parent="Camera/PMenu/PauseMenu/Panel/Buttons"]
margin_top = 49.0
margin_right = 280.0
margin_bottom = 94.0
size_flags_vertical = 3

[node name="Save" type="Button" parent="Camera/PMenu/PauseMenu/Panel/Buttons/HBoxContainer"]
margin_right = 138.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Save"

[node name="Load" type="Button" parent="Camera/PMenu/PauseMenu/Panel/Buttons/HBoxContainer"]
margin_left = 142.0
margin_right = 280.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Load"

[node name="Label" type="Label" parent="Camera/PMenu/PauseMenu/Panel/Buttons"]
margin_top = 98.0
margin_right = 280.0
margin_bottom = 119.0
text = "Quit to..."
align = 1

[node name="Quit" type="HBoxContainer" parent="Camera/PMenu/PauseMenu/Panel/Buttons"]
margin_top = 123.0
margin_right = 280.0
margin_bottom = 168.0
size_flags_vertical = 3

[node name="ToMenu" type="Button" parent="Camera/PMenu/PauseMenu/Panel/Buttons/Quit"]
margin_right = 138.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Menu"

[node name="ToDesktop" type="Button" parent="Camera/PMenu/PauseMenu/Panel/Buttons/Quit"]
margin_left = 142.0
margin_right = 280.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Desktop"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="WaterLighting" type="Node2D" parent="."]
visible = false

[node name="Light" type="Light2D" parent="WaterLighting"]
texture = ExtResource( 7 )
texture_scale = 0.3
energy = 0.8
shadow_enabled = true

[node name="CanvasModulate" type="CanvasModulate" parent="WaterLighting"]
color = Color( 0, 0, 0, 1 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="EnemySpawnLocs" type="Node2D" parent="."]

[node name="EnemySpawn1" type="Node2D" parent="EnemySpawnLocs"]
position = Vector2( -100, -100 )

[node name="EnemySpawn2" type="Node2D" parent="EnemySpawnLocs"]
position = Vector2( 100, -100 )

[node name="EnemySpawn3" type="Node2D" parent="EnemySpawnLocs"]
position = Vector2( -100, 100 )

[node name="EnemySpawn4" type="Node2D" parent="EnemySpawnLocs"]
position = Vector2( 100, 100 )

[node name="EnemyTryTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="GroundChecker" to="." method="_on_GroundChecker_body_entered"]
[connection signal="body_exited" from="GroundChecker" to="." method="_on_GroundChecker_body_exited"]
[connection signal="area_shape_entered" from="WaterChecker" to="." method="_on_WaterChecker_area_shape_entered"]
[connection signal="area_shape_exited" from="WaterChecker" to="." method="_on_WaterChecker_area_shape_exited"]
[connection signal="body_entered" from="InteractChecker/InteractCheckerR" to="." method="_on_InteractCheckerR_body_entered"]
[connection signal="body_exited" from="InteractChecker/InteractCheckerR" to="." method="_on_InteractCheckerR_body_exited"]
[connection signal="body_entered" from="InteractChecker/InteractCheckerL" to="." method="_on_InteractCheckerL_body_entered"]
[connection signal="body_exited" from="InteractChecker/InteractCheckerL" to="." method="_on_InteractCheckerL_body_exited"]
[connection signal="area_shape_entered" from="OxygenChecker" to="." method="_on_OxygenChecker_area_shape_entered"]
[connection signal="area_shape_exited" from="OxygenChecker" to="." method="_on_OxygenChecker_area_shape_exited"]
[connection signal="area_shape_entered" from="DarknessChecker" to="." method="_on_DarknessChecker_area_shape_entered"]
[connection signal="area_shape_exited" from="DarknessChecker" to="." method="_on_DarknessChecker_area_shape_exited"]
[connection signal="area_shape_entered" from="CaveEntranceChecker" to="." method="_on_CaveEntranceChecker_area_shape_entered"]
[connection signal="area_shape_exited" from="CaveEntranceChecker" to="." method="_on_CaveEntranceChecker_area_shape_exited"]
[connection signal="animation_finished" from="Camera/UI/Blackout/AnimationPlayer" to="." method="_on_BlackoutAnimator_animation_finished"]
[connection signal="animation_started" from="Camera/UI/Blackout/AnimationPlayer" to="." method="_on_BlackoutAnimator_animation_started"]
[connection signal="pressed" from="Camera/PMenu/PauseMenu/Panel/Buttons/Resume" to="Camera/PMenu/PauseMenu" method="_on_Resume_pressed"]
[connection signal="pressed" from="Camera/PMenu/PauseMenu/Panel/Buttons/HBoxContainer/Save" to="Camera/PMenu/PauseMenu" method="_on_Save_pressed"]
[connection signal="pressed" from="Camera/PMenu/PauseMenu/Panel/Buttons/HBoxContainer/Load" to="Camera/PMenu/PauseMenu" method="_on_Load_pressed"]
[connection signal="pressed" from="Camera/PMenu/PauseMenu/Panel/Buttons/Quit/ToMenu" to="Camera/PMenu/PauseMenu" method="_on_QuitToMenu_pressed"]
[connection signal="pressed" from="Camera/PMenu/PauseMenu/Panel/Buttons/Quit/ToDesktop" to="Camera/PMenu/PauseMenu" method="_on_QuitToDesktop_pressed"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="EnemyTryTimer" to="." method="_on_EnemyTryTimer_timeout"]
